# intentOS

./: .ruff.toml  CODE_REVIEW.md  Dockerfile  MEMORANDUM.md  QWEN.md  README.md  RESTRUCTURE_PLAN.md  ROADMAP.md  docker-compose.yml  paper-intentos-architecture.md  paper-pef-compiler.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  ai-assistant.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.well-known/: ai.txt  llm.txt
cloud/: bootstrap.sh
deprecated/papers/: paper-intentos-architecture.md  paper-pef-compiler.md  paper-three-layer-architecture.md
deprecated/tests/: test_llm_backends.py  test_memory.py
docs/: AI_AGENT_USAGE.md  AI_GENERATED_INTENT_PACKAGE.md  AI_NATIVE_APP.md  AI_NATIVE_CORE_PRINCIPLES.md  APPS.md  APPS_ARCHITECTURE.md  APPS_DEVELOPMENT.md  APP_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_INTEGRATION.md  BILLING_AND_REVENUE.md  BOOTSTRAP_BENCHMARKS.md  BOOTSTRAP_CODE_REVIEW.md  CLOUD_SELF_BOOTSTRAP.md  CORE_PRINCIPLES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_TOOLS.md  DOCUMENT_INDEX.md  DUAL_MEMORY_OS.md  GET_STARTED.md  INTENTOS_VS_DIFY.md  INTENTOS_VS_OPENCLAW.md  INTENT_PACKAGE_DEVELOPMENT_GUIDE.md  INTENT_PACKAGE_SPEC.md  INTENT_TEMPLATE_SCHEMA.md  JIT_GENERATION_ARCHITECTURE.md  LAYER1_REVIEW.md  LAYERED_ARCHITECTURE.md  LLM_DISCOVERY.md  MEDIUM_PRIORITY_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_V17.md  README.md  SECURITY_AND_PERMISSIONS.md  SELF_BOOTSTRAP.md  SELF_IMPROVEMENT_DEMO.md  SELF_MODIFYING_OS.md  SELF_REPRODUCTION.md  SKILL_SPECIFICATION.md  (+5 more)
docs/01-intro/: 01-what-is-ai-native.md  02-from-ui-to-intent.md  03-intentos-overview.md  04-quickstart.md
docs/02-architecture/: 01-three-layer-model.md  02-intent-as-metalanguage.md  03-self-bootstrap.md  04-distributed-architecture.md  05-context-layer.md  06-cloud-infrastructure.md  07-self-bootstrap-architecture.md  09-self-bootstrap-complete.md  vm-community-single-homing.md
docs/03-compiler/: 01-compiler-architecture.md  02-pef-specification.md  03-code-generation.md  04-linker.md
docs/04-memory/: 01-memory-layers.md  02-distributed-sync.md  03-memory-retrieval.md  04-expiry-policy.md
docs/05-execution/: 01-dag-engine.md  02-map-reduce.md  03-memory-optimization.md  04-llm-backends.md
docs/06-api/: 01-core-api.md  02-compiler-api.md  03-memory-api.md  (+1 more)
examples/: README.md  demo.py  demo_compiler.py  demo_complete_bootstrap.py  demo_distributed_memory.py  demo_distributed_semantic_vm.py  demo_intentgarden_v2.py  demo_llm_backends.py  demo_memory.py  demo_parallel.py  demo_self_bootstrap.py  demo_semantic_vm.py  test_compiler.py  test_distributed_memory.py  test_full_distributed_bootstrap.py  test_intentos.py  test_parallel.py  test_phase2_reliability.py  test_prompt_format.py  test_safe_eval.py
intentos/: __init__.py  compiler_v2.py  parallel.py  semantic_vm.py  types.py
k8s/: deployment.yaml
papers/: Architecture_Diagrams.md  Formal_Definitions_and_Proofs.md  IntentOS_Distributed_AI_OS_Paper.md  Project_Alignment_Report.md  References.md  VM_Community_Single_Homing_Implementation.md  architecture-terminology.md  clear-architecture-doc.md  intentos-architecture-paper.md  paper.md  pef-compiler-paper.md  semantic-vm-paper.md
public/: robots.txt  sitemap.xml
references/: chat-AI原生软件范式转变.txt
scripts/: auto-heal.sh  install-service.sh  intentos.service
startup-growth-strategy/: startup-growth-strategy.md
test-updated-skill/: dao-growth-wisdom.md  first-principles-growth-analysis.md  integrated-growth-strategy.md  meditation-app-prd.md
tests/: __init__.py
(+236 files in other folders)
