[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentos"
version = "0.3.0"
description = "IntentGarden v2.0 - AI 原生意图操作系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.18",
]
ollama = [
    "ollama>=0.1",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "ollama>=0.1",
    "tiktoken>=0.5",
]
all = [
    "intentos[dev,llm]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["examples"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools]
packages = ["intentos", "intentos.core", "intentos.semantic_vm", "intentos.distributed", "intentos.bootstrap", "intentos.compiler", "intentos.interface", "intentos.llm", "intentos.registry", "intentos.engine", "intentos.parser", "intentos.utils"]
