[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentos"
version = "0.3.0"
description = "IntentGarden v2.0 - AI 原生意图操作系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.18",
]
ollama = [
    "ollama>=0.1",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "ollama>=0.1",
    "tiktoken>=0.5",
]
all = [
    "intentos[dev,llm]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["examples"]

# Ruff 配置已移动到 .ruff.toml

[tool.setuptools]
packages = ["intentos", "intentos.bootstrap", "intentos.compiler", "intentos.core", "intentos.distributed", "intentos.engine", "intentos.interface", "intentos.llm", "intentos.llm.backends", "intentos.parser", "intentos.registry", "intentos.semantic_vm"]
