[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentos"
version = "0.3.0"
description = "IntentGarden v2.0 - AI 原生意图操作系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.18",
]
ollama = [
    "ollama>=0.1",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "ollama>=0.1",
    "tiktoken>=0.5",
]
all = [
    "intentos[dev,llm]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Ruff 配置
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["deprecated", ".git", ".mypy_cache", ".pytest_cache", "__pycache__", "*.egg-info", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F841"]

[tool.ruff.format]
exclude = ["deprecated", "build", "dist"]

[tool.mypy]
python_version = "3.10"
exclude = ["deprecated/"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools]
packages = ["intentos", "intentos.bootstrap", "intentos.compiler", "intentos.core", "intentos.distributed", "intentos.engine", "intentos.interface", "intentos.llm", "intentos.llm.backends", "intentos.parser", "intentos.registry", "intentos.semantic_vm"]
